--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ws": "^8.18.0"
+    "dotenv": "^16.4.7",
+    "openai": "^4.90.0",
+    "ws": "^8.18.1"
   }
 }
